<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 Android Shuffle Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F2F2F2" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="4dip"
        android:paddingBottom="10dip" >

        <TextView
            android:id="@+id/user_identifier_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/logon_identifier"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/user_identifier"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logon_identifier_settings"
            android:maxLength="250"
            android:singleLine="true"
            android:textColor="#000000" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/user_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/logon_user"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logon_user"
            android:maxLength="250"
            android:phoneNumber="true"
            android:singleLine="true"
            android:textColor="#000000" >
        </EditText>

        <TextView
            android:id="@+id/pass_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/logon_pass"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logon_pass"
            android:inputType="textPassword"
            android:maxLength="250"
            android:singleLine="true"
            android:textColor="#000000" >
        </EditText>

        <TextView
            android:id="@+id/entranceyear_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/entranceyear"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/entranceyear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entranceyear_hint"
            android:inputType="number"
            android:maxLength="4"
            android:singleLine="true"
            android:textColor="#000000" >
        </EditText>

        <EditText
            android:id="@+id/url"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logon_url_settings"
            android:maxLength="250"
            android:singleLine="true"
            android:textColor="#000000" >
        </EditText>
    </LinearLayout>

</ScrollView>